style: :bug: Se elimina animación de bloque presentación para mejorar accesibilidad

--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -1,7 +1,7 @@
 <app-header></app-header>
 <app-hero></app-hero>
 <div class="container">
-  <div data-aos="fade-left" data-aos-offset="600" data-aos-easing="ease-in-sine">
+  <div>
     <app-presentacion id="presentacion" class="text-center"></app-presentacion>
     <app-trayectoria id="trayectoria"></app-trayectoria>
   </div>
