--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -5,17 +5,18 @@
     position: fixed !important;
     background-color: $background-color;
     z-index: 2;
+
     header {
         position: fixed;
     }
 }
+
 header {
     width: 100%;
     position: absolute;
     z-index: 1;
     top: 0;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    padding: 30px 0;
 
     .menu-items {
         margin-left: auto;
@@ -35,33 +36,62 @@ header {
 
 .menu-burger {
     position: relative;
+
+    .burger-icon {
+        cursor: pointer;
+    }
+
+    .menu {
+        display: none;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        background-color: $white;
+        padding: 10px;
+
+        &.open {
+            display: block;
+        }
+    }
 }
 
-.burger-icon {
-    cursor: pointer;
-}
-
-.menu {
-    display: none;
-    position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: $white;
-    padding: 10px;
-}
-
-.menu.open {
+mat-panel-title {
     display: block;
+    font-size: 32px;
+    text-decoration: none;
+    padding: 10px 0;
+    text-align: center;
+    color: $white;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+}
+
+mat-expansion-panel {
+    background: $cardBackground;
+
+    ::ng-deep mat-expansion-panel-header > .mat-expansion-indicator:after {
+        color: $white;
+    }
+}
+
+.menuBurguerSubItem {
+    display: block;
+    font-size: 20px;
+    text-decoration: none;
+    padding: 10px 0;
+    text-align: center;
+    color: $white;
+    font-weight: bold;
+    transition: all 0.2s ease-in-out;
+    cursor: pointer;
 }
 
 @media ($mediaFromMobile) {
     .menuBurguer {
         display: none;
     }
-    header {
-        .logo {
-            width: 175px;
-        }
+    header .logo {
+        width: 175px;
     }
 }
 
@@ -73,10 +103,8 @@ header {
     .menu-items {
         display: none;
     }
-    header {
-        .logo {
-            width: 100px;
-        }
+    header .logo {
+        width: 100px;
     }
 }
 
@@ -143,6 +171,11 @@ header {
         margin: 7px auto;
         background-color: $white;
         transition: all 0.3s ease-in-out;
+
+        &:nth-child(2) {
+            width: 20px;
+        }
+
         &:nth-child(2) {
             width: 20px;
         }
