test: :test_tube: Test unitarios y de integración básicos header.component

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -32,8 +32,8 @@
             </div>
         </div>
         <div class="menuBurguer">
-            <input type="checkbox" #menuBurguerInput id="burguerElement" style="display: none;" />
-            <label #burguerBtn class="burguer-btn burguer-btn__cross" for="burguerElement" (click)="toggleMenu()">
+            <input type="checkbox" #menuBurguerInput id="menuBurguerInput" style="display: none;" />
+            <label #burguerBtn class="burguer-btn burguer-btn__cross" for="menuBurguerInput" (click)="toggleMenu()">
                 <div class="bar"></div>
                 <div class="bar"></div>
                 <div class="bar"></div>
