--- a/src/app/components/hero/hero.component.html
+++ b/src/app/components/hero/hero.component.html
@@ -3,10 +3,10 @@
         <div id="hero-txt">
             <span class="span-intro">Since 2020</span>
             <h1 #maquinaEscribir></h1>
-            <p>Más de 2 años trabajando con tecnologías Frontend y Backend, especializado en Angular, destaca mi capacidad de aprendizaje, mi actitud y mi perseverancia.</p>
-            <p>Gran apasionado del desarrollo Frontend y de la aplicación de la tecnología para la solvencia de necesidades y problemas del día a día en el ámbito personal y empresarial.</p>
+            <p>Más de 3 años trabajando con tecnologías Frontend y Backend, especializado en Angular,destaca mi capacidad de aprendizaje y adaptación al cambio, así como una actitud proactiva, perseverante y apasionada por la tecnología.</p>
+            <p>Me motiva desarrollar software como una herramienta para solucionar problemas y satisfacer necesidades, tanto a nivel personal como empresarial, garantizando siempre innovación y eficiencia en cada solución implementada.</p>
             <button class="btn-principal">
-                <a href="{{_environment.base_url}}#presentacion">
+                <a href="{{_environment.base_url}}#trayectoria">
                     Conoce un poco más sobre mí
                 </a>
             </button>
@@ -14,6 +14,9 @@
         <div id="hero-logos" class="flex align-center justify-around">
             <picture class="hero-logo">
                 <img src="assets/images/logos/duacode.svg" alt="logo-duacode"/>
+            </picture>
+            <picture class="hero-logo">
+                <img src="assets/images/logos/logo-ica.svg" alt="logo-ica"/>
             </picture>
             <picture class="hero-logo">
                 <img src="assets/images/logos/atos.webp" alt="logo"/>
