--- a/src/app/pages/principal/principal.component.html
+++ b/src/app/pages/principal/principal.component.html
@@ -2,7 +2,7 @@
 <app-hero></app-hero>
 <div class="container">
   <div>
-    <app-presentacion id="presentacion" class="text-center"></app-presentacion>
+    <!-- <app-presentacion id="presentacion" class="text-center"></app-presentacion> -->
     <app-trayectoria id="trayectoria"></app-trayectoria>
   </div>
   <app-skills id="skills"></app-skills>
